--- a/main.ipynb
+++ b/main.ipynb
@@ -18,11 +18,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Czasem coś nie działa, no cóż"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Super sprawa"
+   ]
   }
  ],
  "metadata": {
