--- a/main.ipynb
+++ b/main.ipynb
@@ -72,13 +72,36 @@
     "gdzie: <br>\n",
     "m - masa <br>\n",
     "g - współczynnik grawitacji <br>\n",
-    "$\\rho$  - <br>\n",
-    "v - prędkość <br>\n",
-    "A - <br>\n",
-    "$c_l$ - <br>\n",
-    "$c_d$ - <br>\n",
-    "L - <br>\n",
-    "D - <br>"
+    "$\\rho$  - gęstość powietrza <br>\n",
+    "v - rzeczywista prędkość <br>\n",
+    "A - płaski obszar powierzchni podnoszonej/oporu, powierzchnia rzutu ciała na płaszczyznę prostopadłą do wektora prędkości ciała względem płynu (upraszczając, jest to powierzchnia ‘wystawiona’ w kierunku przepływu)<br>\n",
+    "$c_l$ - współczynnik siły nośnej przy żądanym kącie natarcia, liczba Reynolds'a<br>\n",
+    "$c_d$ - współczynnik siły oporu<br>\n",
+    "L = $c_l \\cdot A $<br>\n",
+    "D = $c_d \\cdot A $<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![probny](https://d-art.ppstatic.pl/kadry/k/r/1/72/be/5a6cdfaf200b9_o_medium.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prędkość ruchu po torze lotu $v$ ma składowe x' i y':"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "v^2 = (x')^2 + (y')^2\n",
+    "\\end{equation}"
    ]
   },
   {
