--- a/main.ipynb
+++ b/main.ipynb
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Prędkość ruchu po torze lotu $v$ ma składowe x' i y':"
+    "Prędkość ruchu po torze lotu v ma składowe x' i y':"
    ]
   },
   {
