--- a/main.ipynb
+++ b/main.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hello world!\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -24,7 +41,7 @@
    "source": [
     "- siła grawitacji $F_g$\n",
     "\\begin{equation}\n",
-    "F_g = m \\cdot g \n",
+    "F_g = m \\cdot g ,\n",
     "\\end{equation}"
    ]
   },
@@ -34,7 +51,7 @@
    "source": [
     "- siła nośna $F_l$\n",
     "\\begin{equation}\n",
-    "F_l = \\dfrac{\\rho}{2} \\cdot v^2 \\cdot c_l \\cdot A = \\dfrac{\\rho}{2} \\cdot v^2 \\cdot L\n",
+    "F_l = \\dfrac{\\rho}{2} \\cdot v^2 \\cdot c_l \\cdot A = \\dfrac{\\rho}{2} \\cdot v^2 \\cdot L,\n",
     "\\end{equation}"
    ]
   },
@@ -44,7 +61,7 @@
    "source": [
     "- siła oporu $F_d$\n",
     "\\begin{equation}\n",
-    "F_d = \\dfrac{\\rho}{2} \\cdot v^2 \\cdot c_d \\cdot A = \\dfrac{\\rho}{2} \\cdot v^2 \\cdot D\n",
+    "F_d = \\dfrac{\\rho}{2} \\cdot v^2 \\cdot c_d \\cdot A = \\dfrac{\\rho}{2} \\cdot v^2 \\cdot D ,\n",
     "\\end{equation}"
    ]
   },
@@ -53,15 +70,38 @@
    "metadata": {},
    "source": [
     "gdzie: <br>\n",
-    "m - masa <br>\n",
-    "g - współczynnik grawitacji <br>\n",
-    "$\\rho$  - <br>\n",
-    "v - prędkość <br>\n",
-    "A - <br>\n",
-    "$c_l$ - <br>\n",
-    "$c_d$ - <br>\n",
-    "L - <br>\n",
-    "D - <br>"
+    "m - masa, <br>\n",
+    "g - współczynnik grawitacji, <br>\n",
+    "$\\rho$  - gęstość powietrza, <br>\n",
+    "v - rzeczywista prędkość, <br>\n",
+    "A - płaski obszar powierzchni podnoszonej/oporu, powierzchnia rzutu ciała na płaszczyznę prostopadłą do wektora prędkości ciała względem płynu (upraszczając, jest to powierzchnia ‘wystawiona’ w kierunku przepływu),<br>\n",
+    "$c_l$ - współczynnik siły nośnej przy żądanym kącie natarcia, liczba Reynolds'a,<br>\n",
+    "$c_d$ - współczynnik siły oporu,<br>\n",
+    "L = $c_l \\cdot A $,<br>\n",
+    "D = $c_d \\cdot A $.<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![probny](https://d-art.ppstatic.pl/kadry/k/r/1/72/be/5a6cdfaf200b9_o_medium.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prędkość ruchu po torze lotu $v$ ma składowe x' i y':"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "v^2 = (x')^2 + (y')^2\n",
+    "\\end{equation}"
    ]
   },
   {
@@ -75,13 +115,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "attachments": {},
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "\\begin{equation}\n",
-    "v_x' = \\dfrac{-F_d \\cdot \\cos \\varphi - f_l \\sin \\varphi}{m}  \n",
+    "v_x' = \\dfrac{-F_d \\cdot \\cos \\varphi - F_l \\sin \\varphi}{m}  \n",
     "\\hspace{1cm}\n",
-    "v_y' = \\dfrac{-F_d \\sin \\varphi - f_l \\cos \\varphi}{m} - g\n",
+    "v_y' = \\dfrac{-F_d \\sin \\varphi - F_l \\cos \\varphi}{m} - g\n",
     "\\end{equation}\n",
     "\\\n",
     "\\begin{equation}\n",
@@ -95,9 +136,47 @@
    "metadata": {},
    "source": [
     "gdzie: <br>\n",
-    "$F_d$ - <br>\n",
-    "$f_l$  - <br>\n",
-    "$\\varphi$ -  <br>"
+    "$F_d$ - siła oporu,<br>\n",
+    "$F_l$  - siła nośna, <br>\n",
+    "$\\varphi$ - kąt nachylenia."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "\\dfrac{dV_x}{dt} = \\dfrac{G_x \\cdot (V_x)^2}{m}\n",
+    "\\hspace{3cm}\n",
+    "\\dfrac{dV_y}{dt} = \\dfrac{G_y\\cdot (V_y)^2}{m} -g\n",
+    "\\end{equation}\n",
+    "\\\n",
+    "\\begin{equation}\n",
+    "G_x = \\frac{1}{2}\\cdot c_d \\cdot S_x \\cdot \\rho  \n",
+    "\\hspace{3cm}\n",
+    "G_y = \\frac{1}{2}\\cdot c_d \\cdot S_y \\cdot \\rho\n",
+    "\\end{equation}\n",
+    "\\\n",
+    "\\begin{equation}\n",
+    "V_x = - \\dfrac{1}{\\dfrac{G_x}{m} \\cdot t + V_{Xo}}\n",
+    "\\hspace{3cm}\n",
+    "V_y = - \\sqrt{\\dfrac{m \\cdot g}{G_y}} \\cdot \\tanh\\sqrt{\\dfrac{m \\cdot g}{G_y}} \\cdot t\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "gdzie: <br>\n",
+    "$V_x$ - prędkość x'owa, <br>\n",
+    "$V_y$ - prędkość y'owa, <br>\n",
+    "$m$ - masa skoczka, <br>\n",
+    "$g$ - współczynnik grawitacji, <br>\n",
+    "$t$ - czas, <br>\n",
+    "$c_d$ - współczynnik siły oporu/nośnej,<br>\n",
+    "$S_x$, $S_y$ - powierzchnia, <br>\n",
+    "$\\rho$  - gęstość powietrza, <br>"
    ]
   },
   {
@@ -109,13 +188,6 @@
     "w skokach narciarskich mają taką samą wielkość jak siły oporu, a długość lotu jest bardzo wrażliwa\n",
     "zmiany w obu."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -134,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
