dodana budowa skoczni

--- a/main.ipynb
+++ b/main.ipynb
@@ -166,7 +166,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![przykład1](good_aerodynamics.png)\n"
+    "![przykład1](great_aerodynamics.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![przykład2](poor_aerodynamics.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![skocznia](budowa_skoczni.png)"
    ]
   },
   {
