--- a/main.ipynb
+++ b/main.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "- siła oporu $F_d$\n",
     "\\begin{equation}\n",
-    "F_d = \\dfrac{\\rho}{2} \\cdot v^2 \\cdot c_d \\cdot A = \\dfrac{\\rho}{2} \\cdot v^2 \\cdot D ,\n",
+    "F_d = \\dfrac{\\rho}{2} \\cdot c_d \\cdot A \\cdot \\text{v}^2 = \\dfrac{\\rho}{2} \\cdot D  \\cdot \\text{v}^2 = \\gamma \\cdot \\text{v}^2,\n",
     "\\end{equation}"
    ]
   },
@@ -60,7 +60,8 @@
     "$c_l$ - współczynnik siły nośnej przy żądanym kącie natarcia, liczba Reynolds'a,<br>\n",
     "$c_d$ - współczynnik siły oporu,<br>\n",
     "L = $c_l \\cdot A $,<br>\n",
-    "D = $c_d \\cdot A $.<br>"
+    "D = $c_d \\cdot A $.<br>\n",
+    "$\\gamma = \\dfrac {\\rho}{2} \\cdot D$  - stała<br>"
    ]
   },
   {
@@ -76,24 +77,58 @@
    "source": [
     "Prędkość ruchu po torze lotu v ma składowe x' i y':\n",
     "\\begin{equation}\n",
-    "\\text{v}^2 = (\\text{x}')^2 + (\\text{y}')^2\n",
+    "\\text{v}^2 = (\\text{x}')^2 + (\\text{y}')^2, \\\\\n",
+    "\\text{v} = \\sqrt{(\\text{x}')^2 + (\\text{y}')^2}.\n",
     "\\end{equation}    \n",
-    "Sportowiec może silnie wpływać na siły aerodynamiczne, zmieniając swoją postawę, tj. zwiększając lub zmniejszając swoją powierzchnię. Może to wpływać na opór i siłę nośną (i moment obrotowy), a tym samym znacząco wpływają na zmiany jego pozycji w locie względem strumienia powietrza (kąt nachylenia). Tor lotu opisują następujące nieliniowe równania różniczkowe, które można rozwiązać numerycznie za pomocą odpowiednich procedur iteracyjnych:"
+    "Sportowiec może silnie wpływać na siły aerodynamiczne, zmieniając swoją postawę, tj. zwiększając lub zmniejszając swoją powierzchnię. Może to wpływać na opór i siłę nośną (i moment obrotowy), a tym samym znacząco wpływają na zmiany jego pozycji w locie względem strumienia powietrza (kąt nachylenia). Tor lotu opisują następujące nieliniowe równania różniczkowe, które można rozwiązać numerycznie za pomocą odpowiednich procedur iteracyjnych."
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aby znaleźć równanie toru lotu wykorzystujemy drugą zasadę dynamiki Newtona i rozdzielamy nasze obliczenia na tor lotu względem osi X i Y."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "HAlo czy $F_y$ ma dobra kolejnosc odejmowania?! <br>\n",
+    "Czy powinno byc $\\gamma_x$ i $\\gamma_y$ ?? <br>\n",
+    "CZy robic $V_x^2$ i y tez czy robic oba z kwadratem czy oba bez? czy i to i to ???!!!\n",
+    "\\begin{equation}\n",
+    "\\left\\{ \\begin{array}{l}\n",
+    "F_x = -F_d \\\\\n",
+    "F_y = F_l - F_g\\\\\n",
+    "\\end{array} \\right. \n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\left\\{ \\begin{array}{l}\n",
+    "m \\cdot a = - \\gamma_x \\cdot V_x \\\\\n",
+    "m \\cdot a =  \\gamma_y \\cdot V_y - m \\cdot g\\\\\n",
+    "\\end{array} \\right. \n",
+    "\\end{equation}\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pamiętając, że $ a = \\dfrac{dV}{dt} = \\dfrac{d^2x}{dt^2}$\n",
+    "    otrzymujemy :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "\\begin{equation}\n",
-    "v_x' = \\dfrac{-F_d \\cdot \\cos \\varphi - F_l \\sin \\varphi}{m}  \n",
+    "m \\cdot \\dfrac{dV_x}{dt} = - \\gamma \\cdot V_x,\n",
     "\\hspace{1cm}\n",
-    "v_y' = \\dfrac{-F_d \\sin \\varphi - F_l \\cos \\varphi}{m} - g\n",
-    "\\end{equation}\n",
-    "\\\n",
-    "\\begin{equation}\n",
-    "x' = v_x \\hspace{1cm}\n",
-    "y' = v_y\n",
+    "m \\cdot \\dfrac{dV_y}{dt} =  \\gamma \\cdot V_y - m \\cdot g.\n",
     "\\end{equation}"
    ]
   },
@@ -101,10 +136,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "gdzie: <br>\n",
-    "$F_d$ - siła oporu,<br>\n",
-    "$F_l$  - siła nośna, <br>\n",
-    "$\\varphi$ - kąt nachylenia."
+    "Następnie dzielimy obustronnie przez $m$\n",
+    "\\begin{equation}\n",
+    "\\dfrac{dV_x}{dt} = \\dfrac{- \\gamma \\cdot V_x}{m},\n",
+    "\\hspace{1cm}\n",
+    "\\dfrac{dV_y}{dt} =  \\dfrac{\\gamma \\cdot V_y}{m} -  g .\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Przekształcamy równania:\n",
+    "\\begin{equation}\n",
+    "\\int \\dfrac{dV_x}{ \\dfrac{- \\gamma \\cdot V_x}{m}} = \\int dt,\n",
+    "\\hspace{1cm}\n",
+    "\\int \\dfrac{dV_y}{\\dfrac{\\gamma \\cdot V_y}{m} -  g} =  \\int dt .\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Najpierw rozwiążemy równanie po lewej:\n",
+    "\\begin{equation}\n",
+    "t = \\int \\dfrac{dV_x}{ \\dfrac{- \\gamma \\cdot V_x}{m}} = - \\dfrac{m}{\\gamma} \\cdot \\int \\frac{1}{V_x} dV_x = - \\dfrac{m}{\\gamma} \\cdot \\ln{|V_x|} + C,\n",
+    "\\\\\n",
+    "\\ln{|V_x|}= - \\dfrac{t \\cdot \\gamma}{m},\n",
+    "\\\\\n",
+    "V_x = (e)^ {-\\dfrac{t\\gamma}{m}}.\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Teraz możemy przejść do równania po prawej przekształcając na ułamki proste:\n",
+    "\\begin{equation}\n",
+    "t = \\int \\dfrac{dV_y}{\\dfrac{\\gamma \\cdot V_y}{m} -g} = \\int \\dfrac{1}{2} \\sqrt{\\dfrac{m}{\\gamma g}} \\left( \\dfrac{1}{\\sqrt{\\dfrac{mg}{\\gamma}}+V_y} + \\dfrac{1}{\\sqrt{\\dfrac{mg}{\\gamma}}-V_y}\\right)dV_y = \\dfrac{1}{2}\\sqrt{\\dfrac{m}{\\gamma g}}\\ln\\left({ \\dfrac{\\sqrt{\\dfrac{mg}{\\gamma}}-V_y} {\\sqrt{\\dfrac{mg}{\\gamma}}+V_y} } \\right)+C.\n",
+    "\\end{equation}\n",
+    "<br>\n",
+    "Z warunku początkowego $V_y(0)=0$ mamy:\n",
+    "\\begin{equation}\n",
+    "\\frac{1}{2} \\sqrt{\\frac{m}{g\\gamma}}\\cdot \\ln{1} +C =0 \\Rightarrow C=0.\n",
+    "\\end{equation}\n",
+    "<br>\n",
+    "Możemy z tego równania wyliczyć $V_y$\n",
+    "\\begin{equation}\n",
+    "V_y(t)=\\sqrt{\\dfrac{mg}{\\gamma}} \\dfrac{(e)^{\\sqrt{\\frac{\\gamma g}{m}}t}-(e)^{-\\sqrt{\\frac{\\gamma g}{m}}\\cdot t}}{(e)^{\\sqrt{\\frac{\\gamma g}{m}}t}+(e)^{\\sqrt{\\frac{\\gamma g}{m}}t}} = \\sqrt{\\dfrac{mg}{\\gamma}} \\tanh{\\sqrt{\\dfrac{\\gamma g}{m}}t}.\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podsumowując otrzymaliśmy\n",
+    "\\begin{equation}\n",
+    "\\left\\{ \\begin{array}{l}\n",
+    "V_x = e^ {-\\left(\\dfrac{t\\gamma}{m}\\right)}, \\\\\n",
+    "V_y = \\sqrt{\\dfrac{mg}{\\gamma}} \\tanh{\\sqrt{\\dfrac{\\gamma g}{m}}t}.\\\\\n",
+    "\\end{array} \\right. \n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Na tym koniec nie wiadomo czy dobre obliczenia\n"
    ]
   },
   {
@@ -207,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
