--- a/main.ipynb
+++ b/main.ipynb
@@ -80,7 +80,7 @@
     "\\text{v}^2 = (\\text{x}')^2 + (\\text{y}')^2, \\\\\n",
     "\\text{v} = \\sqrt{(\\text{x}')^2 + (\\text{y}')^2}.\n",
     "\\end{equation}    \n",
-    "Sportowiec może silnie wpływać na siły aerodynamiczne, zmieniając swoją postawę, tj. zwiększając lub zmniejszając swoją powierzchnię. Może to wpływać na opór i siłę nośną (i moment obrotowy), a tym samym znacząco wpływają na zmiany jego pozycji w locie względem strumienia powietrza (kąt nachylenia). Tor lotu opisują następujące nieliniowe równania różniczkowe, które można rozwiązać numerycznie za pomocą odpowiednich procedur iteracyjnych."
+    "Sportowiec może silnie wpływać na siły aerodynamiczne poprzez zmianę ułożenia swojego ciała, tj. zwiększając lub zmniejszając swoją powierzchnię. Może to wpływać na opór i siłę nośną (i moment obrotowy), a tym samym znacząco wpływają na zmiany jego pozycji w locie względem strumienia powietrza (kąt nachylenia). Tor lotu opisują następujące nieliniowe równania różniczkowe, które można rozwiązać numerycznie za pomocą odpowiednich procedur iteracyjnych."
    ]
   },
   {
