Budowa skoczni początek objaśnienia

--- a/main.ipynb
+++ b/main.ipynb
@@ -269,14 +269,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![przykład1](great_aerodynamics.png)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![przykład2](poor_aerodynamics.png)"
+    "# Budowa skoczni\n",
+    "\n",
+    "Skocznia narciarska zbudowana jest zgodnie ze standardami International Ski Federation. Wytyczne te zostały napisane z myślą o bezpieczeństwie zawodników, tak aby wszystkie oddziaływania fizyczne oraz biomechaniczne były kontrolowane oraz łatwe do przewidzenia.\n",
+    "\n",
+    "Najważniejsze wymiary skoczni to długość horyzontalna H mierzona od progu do punktu K oraz odległość wertykalna H od progu do punktu K. Punkt K jest punktem przegięcia skoczni narciarskiej, dlatego wysokość powierzchni lądowania można wyrazić jako funkcję wielomianową trzeciego stopnia."
    ]
   },
   {
@@ -310,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
