--- a/main.ipynb
+++ b/main.ipynb
@@ -273,7 +273,12 @@
     "\n",
     "Skocznia narciarska zbudowana jest zgodnie ze standardami International Ski Federation. Wytyczne te zostały napisane z myślą o bezpieczeństwie zawodników, tak aby wszystkie oddziaływania fizyczne oraz biomechaniczne były kontrolowane oraz łatwe do przewidzenia.\n",
     "\n",
-    "Najważniejsze wymiary skoczni to długość horyzontalna H mierzona od progu do punktu K oraz odległość wertykalna H od progu do punktu K. Punkt K jest punktem przegięcia skoczni narciarskiej, dlatego wysokość powierzchni lądowania można wyrazić jako funkcję wielomianową trzeciego stopnia."
+    "Najważniejsze wymiary skoczni to długość horyzontalna H mierzona od progu do punktu K oraz odległość wertykalna H od progu do punktu K. Punkt K jest punktem przegięcia skoczni narciarskiej, dlatego wysokość powierzchni lądowania można wyrazić jako funkcję wielomianową trzeciego stopnia.\n",
+    "Wykorzystując funkcję:\n",
+    "\\begin{equation}\n",
+    "\\frac{1}{3a}x^3 - x^2 + c\n",
+    "\\end{equation}\n",
+    "inżynierowie są w stanie znaleźć parabolę sześcienną z punktem przegięcia $x = a$\n"
    ]
   },
   {
