Budowa skoczni ze wzorem

--- a/main.ipynb
+++ b/main.ipynb
@@ -273,12 +273,12 @@
     "\n",
     "Skocznia narciarska zbudowana jest zgodnie ze standardami International Ski Federation. Wytyczne te zostały napisane z myślą o bezpieczeństwie zawodników, tak aby wszystkie oddziaływania fizyczne oraz biomechaniczne były kontrolowane oraz łatwe do przewidzenia.\n",
     "\n",
-    "Najważniejsze wymiary skoczni to długość horyzontalna H mierzona od progu do punktu K oraz odległość wertykalna H od progu do punktu K. Punkt K jest punktem przegięcia skoczni narciarskiej, dlatego wysokość powierzchni lądowania można wyrazić jako funkcję wielomianową trzeciego stopnia.\n",
+    "Najważniejsze wymiary skoczni to długość horyzontalna H mierzona od progu do punktu K oraz odległość wertykalna H od progu do punktu K. Stosunek H:L jest tym większy im dłuższa jest skocznia i wynosi zazwyczaj $ 0.45 < H:L < 0.60$ . Punkt K jest punktem przegięcia skoczni narciarskiej, dlatego wysokość powierzchni lądowania (stoku) można wyrazić jako funkcję wielomianową trzeciego stopnia.\n",
     "Wykorzystując funkcję:\n",
     "\\begin{equation}\n",
     "\\frac{1}{3a}x^3 - x^2 + c\n",
     "\\end{equation}\n",
-    "inżynierowie są w stanie znaleźć parabolę sześcienną z punktem przegięcia $x = a$\n"
+    "inżynierowie są w stanie znaleźć parabolę sześcienną z punktem przegięcia w $x = a$ dla żądanego a\n"
    ]
   },
   {
@@ -286,6 +286,13 @@
    "metadata": {},
    "source": [
     "![skocznia](budowa_skoczni.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Początkowe nachylenie stoku powinno być większe niż kąt wyjścia z progu, ponieważ tor lotu skoczka w stosunku do powierzchni powinien przypominać parabolę, czyli wysokość nad stokiem początkowe rośnie, w połowie lotu przyjmuje maksimum, a następnie maleje aż do lądowania."
    ]
   },
   {
