--- a/main.ipynb
+++ b/main.ipynb
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![probny](https://d-art.ppstatic.pl/kadry/k/r/1/72/be/5a6cdfaf200b9_o_medium.jpg)"
+    "zdjecie skoczka na osiach x i y z silami!!!"
    ]
   },
   {
@@ -87,98 +87,214 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aby znaleźć równanie toru lotu wykorzystujemy drugą zasadę dynamiki Newtona i rozdzielamy nasze obliczenia na tor lotu względem osi X i Y."
+    "Aby znaleźć równanie toru lotu wykorzystujemy drugą zasadę dynamiki Newtona i rozdzielamy nasze obliczenia na tor lotu względem osi X i Y. Wyznaczymy model liniowy dla małych prędkości oraz kwadratowy dla większych prędkości."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "HAlo czy $F_y$ ma dobra kolejnosc odejmowania?! <br>\n",
-    "Czy powinno byc $\\gamma_x$ i $\\gamma_y$ ?? <br>\n",
-    "CZy robic $V_x^2$ i y tez czy robic oba z kwadratem czy oba bez? czy i to i to ???!!!\n",
+    "#### Model liniowy:\n",
     "\\begin{equation}\n",
     "\\left\\{ \\begin{array}{l}\n",
-    "F_x = -F_d \\\\\n",
-    "F_y = F_l - F_g\\\\\n",
+    "F_x = -F_d, \\\\\n",
+    "F_y = F_l - F_g,\\\\\n",
     "\\end{array} \\right. \n",
     "\\end{equation}\n",
     "\n",
     "\\begin{equation}\n",
     "\\left\\{ \\begin{array}{l}\n",
-    "m \\cdot a = - \\gamma_x \\cdot V_x \\\\\n",
-    "m \\cdot a =  \\gamma_y \\cdot V_y - m \\cdot g\\\\\n",
+    "m \\cdot a_x = - \\gamma_x \\cdot V_x, \\\\\n",
+    "m \\cdot a_y =  \\gamma_y \\cdot V_y - m \\cdot g.\\\\\n",
     "\\end{array} \\right. \n",
     "\\end{equation}\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Pamiętając, że $ a = \\dfrac{dV}{dt} = \\dfrac{d^2x}{dt^2}$\n",
-    "    otrzymujemy :"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
+    "Pamiętając, że $ a = \\dfrac{dV}{dt}$ otrzymujemy:\n",
     "\\begin{equation}\n",
-    "m \\cdot \\dfrac{dV_x}{dt} = - \\gamma \\cdot V_x,\n",
-    "\\hspace{1cm}\n",
-    "m \\cdot \\dfrac{dV_y}{dt} =  \\gamma \\cdot V_y - m \\cdot g.\n",
-    "\\end{equation}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Następnie dzielimy obustronnie przez $m$\n",
-    "\\begin{equation}\n",
-    "\\dfrac{dV_x}{dt} = \\dfrac{- \\gamma \\cdot V_x}{m},\n",
-    "\\hspace{1cm}\n",
-    "\\dfrac{dV_y}{dt} =  \\dfrac{\\gamma \\cdot V_y}{m} -  g .\n",
-    "\\end{equation}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Przekształcamy równania:\n",
-    "\\begin{equation}\n",
-    "\\int \\dfrac{dV_x}{ \\dfrac{- \\gamma \\cdot V_x}{m}} = \\int dt,\n",
-    "\\hspace{1cm}\n",
-    "\\int \\dfrac{dV_y}{\\dfrac{\\gamma \\cdot V_y}{m} -  g} =  \\int dt .\n",
-    "\\end{equation}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Najpierw rozwiążemy równanie po lewej:\n",
-    "\\begin{equation}\n",
-    "t = \\int \\dfrac{dV_x}{ \\dfrac{- \\gamma \\cdot V_x}{m}} = - \\dfrac{m}{\\gamma} \\cdot \\int \\frac{1}{V_x} dV_x = - \\dfrac{m}{\\gamma} \\cdot \\ln{|V_x|} + C,\n",
-    "\\\\\n",
-    "\\ln{|V_x|}= - \\dfrac{t \\cdot \\gamma}{m},\n",
-    "\\\\\n",
-    "V_x = (e)^ {-\\dfrac{t\\gamma}{m}}.\n",
-    "\\end{equation}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Teraz możemy przejść do równania po prawej przekształcając na ułamki proste:\n",
-    "\\begin{equation}\n",
-    "t = \\int \\dfrac{dV_y}{\\dfrac{\\gamma \\cdot V_y}{m} -g} = \\int \\dfrac{1}{2} \\sqrt{\\dfrac{m}{\\gamma g}} \\left( \\dfrac{1}{\\sqrt{\\dfrac{mg}{\\gamma}}+V_y} + \\dfrac{1}{\\sqrt{\\dfrac{mg}{\\gamma}}-V_y}\\right)dV_y = \\dfrac{1}{2}\\sqrt{\\dfrac{m}{\\gamma g}}\\ln\\left({ \\dfrac{\\sqrt{\\dfrac{mg}{\\gamma}}-V_y} {\\sqrt{\\dfrac{mg}{\\gamma}}+V_y} } \\right)+C.\n",
+    "\\left\\{ \\begin{array}{l}\n",
+    "m \\cdot \\dfrac{dV_x}{dt} = - \\gamma_x \\cdot V_x, \\\\\n",
+    "m \\cdot \\dfrac{dV_y}{dt} =  \\gamma_y \\cdot V_y - m \\cdot g.\\\\\n",
+    "\\end{array} \\right. \n",
     "\\end{equation}\n",
-    "<br>\n",
+    "Następnie dzielimy oba równania obustronnie przez $m$:\n",
+    "\\begin{equation}\n",
+    "\\left\\{ \\begin{array}{l}\n",
+    "\\dfrac{dV_x}{dt} = \\dfrac{- \\gamma_x \\cdot V_x}{m}, \\\\\n",
+    "\\dfrac{dV_y}{dt} =  \\dfrac{\\gamma_y \\cdot V_y}{m} -  g .\\\\\n",
+    "\\end{array} \\right.\n",
+    "\\end{equation}\n",
+    "Przekształcamy równania i całkujemy:\n",
+    "\\begin{equation}\n",
+    "\\left\\{ \\begin{array}{l}\n",
+    "\\int \\dfrac{dV_x}{ \\dfrac{- \\gamma_x \\cdot V_x}{m}} = \\int dt,\\\\\n",
+    "\\int \\dfrac{dV_y}{\\dfrac{\\gamma_y \\cdot V_y}{m} -  g} =  \\int dt .\\\\\n",
+    "\\end{array} \\right.\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Najpierw rozwiążemy równanie dla osi X:\n",
+    "\\begin{equation}\n",
+    "\\int \\dfrac{dV_x}{ \\dfrac{- \\gamma_x \\cdot V_x}{m}} = - \\dfrac{m}{\\gamma_x} \\cdot \\int \\frac{1}{V_x} dV_x = - \\dfrac{m}{\\gamma_x} \\cdot \\ln{|V_x|} + C = t,\n",
+    "\\\\\n",
+    "-\\dfrac{m}{\\gamma_x}\\cdot \\ln{|V_x|}= t - C ,\n",
+    "\\\\\n",
+    "\\ln{|V_x|} = - \\dfrac{t \\cdot \\gamma_x}{m} + \\dfrac{C \\cdot \\gamma_x}{m}\n",
+    "\\\\\n",
+    "V_x = (e)^ {-\\dfrac{t\\gamma_x}{m}} \\cdot (e)^{C{\\dfrac{\\gamma_x}{m}}}.\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Teraz możemy przejść do równania dla osi Y:\n",
+    "\\begin{equation}\n",
+    "\\int \\dfrac{dV_y}{\\dfrac{\\gamma_y}{m}\\cdot V_y -g} = \\dfrac{m}{\\gamma_y}\\cdot \\ln{|\\dfrac{\\gamma_y}{m}V_y - g|} +C = t \\\\\n",
+    "\\dfrac{m}{\\gamma_y}\\cdot \\ln{|\\dfrac{\\gamma_y}{m}V_y - g|} = t - C \\\\ \n",
+    "\\ln{|\\dfrac{\\gamma_y}{m}V_y - g|} =\\dfrac{t\\gamma_y}{m} - \\dfrac{C\\gamma_y}{m} \\\\\n",
+    "\\dfrac{\\gamma_y}{m}V_y - g = e^{\\left(\\dfrac{t\\gamma_y}{m} - \\dfrac{C\\gamma_y}{m}\\right)}\\\\\n",
+    "\\dfrac{\\gamma_y}{m}V_y = e^{\\left(\\dfrac{t\\gamma_y}{m} - \\dfrac{C\\gamma_y}{m}\\right)} +g \\\\\n",
+    "V_y = \\dfrac{m}{\\gamma_y}e^{\\left(\\dfrac{t\\gamma_y}{m} - \\dfrac{C\\gamma_y}{m}\\right)} +\\dfrac{m}{\\gamma_y}g\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Model kwadratowy:\n",
+    "\\begin{equation}\n",
+    "\\left\\{ \\begin{array}{l}\n",
+    "F_x = -F_d, \\\\\n",
+    "F_y = F_l - F_g,\\\\\n",
+    "\\end{array} \\right. \n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\left\\{ \\begin{array}{l}\n",
+    "m \\cdot a_x = - \\gamma_x \\cdot V_x^2, \\\\\n",
+    "m \\cdot a_y =  \\gamma_y \\cdot V_y^2 - m \\cdot g.\\\\\n",
+    "\\end{array} \\right. \n",
+    "\\end{equation}\n",
+    "Pamiętając, że $ a = \\dfrac{dV}{dt}$ otrzymujemy:\n",
+    "\\begin{equation}\n",
+    "\\left\\{ \\begin{array}{l}\n",
+    "m \\cdot \\dfrac{dV_x}{dt} = - \\gamma_x \\cdot V_x^2, \\\\\n",
+    "m \\cdot \\dfrac{dV_y}{dt} =  \\gamma_y \\cdot V_y^2 - m \\cdot g.\\\\\n",
+    "\\end{array} \\right. \n",
+    "\\end{equation}\n",
+    "Następnie dzielimy oba równania obustronnie przez $m$:\n",
+    "\\begin{equation}\n",
+    "\\left\\{ \\begin{array}{l}\n",
+    "\\dfrac{dV_x}{dt} = \\dfrac{- \\gamma_x \\cdot V_x^2}{m}, \\\\\n",
+    "\\dfrac{dV_y}{dt} =  \\dfrac{\\gamma_y \\cdot V_y^2}{m} -  g .\\\\\n",
+    "\\end{array} \\right.\n",
+    "\\end{equation}\n",
+    "Przekształcamy równania i całkujemy:\n",
+    "\\begin{equation}\n",
+    "\\left\\{ \\begin{array}{l}\n",
+    "\\int \\dfrac{dV_x}{ \\dfrac{- \\gamma_x \\cdot V_x^2}{m}} = \\int dt,\\\\\n",
+    "\\int \\dfrac{dV_y}{\\dfrac{\\gamma_y \\cdot V_y^2}{m} -  g} =  \\int dt .\\\\\n",
+    "\\end{array} \\right.\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Najpierw rozwiążemy równanie dla osi X:\n",
+    "\\begin{equation}\n",
+    "\\int \\dfrac{dV_x}{ \\dfrac{- \\gamma_x \\cdot V_x^2}{m}} = - \\dfrac{m}{\\gamma_x} \\cdot \\int \\frac{1}{V_x^2} dV_x = - \\dfrac{m}{\\gamma_x} \\cdot\\left( - \\dfrac{1}{V_x} \\right)+ C = \\dfrac{m}{\\gamma_x \\cdot V_x} + C = t,\n",
+    "\\\\\n",
+    "\\dfrac{m}{\\gamma_x \\cdot V_x} = t - C,\n",
+    "\\\\\n",
+    "V_x = \\dfrac{m}{\\gamma_x(t - C) }.\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Teraz możemy przejść do równania dla osi Y: <br>\n",
+    "Korzystamy z ułamków prostych\n",
+    "\\begin{equation}\n",
+    "\\dfrac{dV_y}{\\dfrac{\\gamma_y}{m}V_y^2 - g} = \\dfrac{A}{\\sqrt{\\dfrac{\\gamma_y}{m}}V_y - \\sqrt{g}}  +\\dfrac{B}{\\sqrt{\\dfrac{\\gamma_y}{m}}V_y + \\sqrt{g}}, \\\\\n",
+    "\\text{mnożymy obustronnie przez mianownik po lewej stronie}\\\\\n",
+    "dV_y = A\\cdot \\left(\\sqrt{\\dfrac{\\gamma_y}{m}}V_y + \\sqrt{g}\\right) + B\\left(\\sqrt{\\dfrac{\\gamma_y}{m}}V_y - \\sqrt{g}\\right) \\\\\n",
+    "dVy = V_y \\cdot \\left( \\sqrt{\\dfrac{\\gamma_y}{m}}\\cdot A +\\sqrt{\\dfrac{\\gamma_y}{m}}\\cdot B \\right) +\\left( \\sqrt{g}\\cdot A-\\sqrt{g}\\cdot B \\right)\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\left\\{ \\begin{array}{l}\n",
+    "\\sqrt{\\dfrac{\\gamma_y}{m}}\\cdot A +\\sqrt{\\dfrac{\\gamma_y}{m}}\\cdot B  = 0 \\\\\n",
+    "\\sqrt{g}\\cdot A-\\sqrt{g}\\cdot B = 1\\\\\n",
+    "\\end{array} \\right. \n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\left\\{ \\begin{array}{l}\n",
+    "2 \\cdot \\sqrt{\\dfrac{\\gamma_y}{m}} \\cdot B = - \\sqrt{\\dfrac{\\gamma_y}{mg}} \\\\\n",
+    "A = \\dfrac{1}{\\sqrt{g}} +B\\\\\n",
+    "\\end{array} \\right. \n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\left\\{ \\begin{array}{l}\n",
+    "B = - \\dfrac{1}{2}\\sqrt{\\dfrac{1}{g}} \\\\\n",
+    "A =  \\dfrac{1}{2}\\sqrt{\\dfrac{1}{g}}\\\\\n",
+    "\\end{array} \\right. \n",
+    "\\end{equation}\n",
+    "Czyli otrzymujemy:\n",
+    "\\begin{equation}\n",
+    "\\dfrac{dV_y}{\\dfrac{\\gamma_y}{m}V_y^2 - g} = \\dfrac{\\dfrac{1}{2}\\sqrt{\\dfrac{1}{g}}}{\\sqrt{\\dfrac{\\gamma_y}{m}}V_y - \\sqrt{g}}  +\\dfrac{- \\dfrac{1}{2}\\sqrt{\\dfrac{1}{g}}}{\\sqrt{\\dfrac{\\gamma_y}{m}}V_y + \\sqrt{g}} = \\dfrac{1}{2}\\sqrt{\\dfrac{m}{g\\gamma_y}} \\left( \\dfrac{1}{V_y - \\sqrt{\\dfrac{mg}{\\gamma_y}}}  - \\dfrac{1}{V_y + \\sqrt{\\dfrac{mg}{\\gamma_y}}} \\right),\n",
+    "\\end{equation}\n",
+    "Możemy teraz całkować:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "\\int \\dfrac{dV_y}{\\dfrac{\\gamma_y}{m}\\cdot V_y^2 -g} = \n",
+    "\\int \\dfrac{1}{2} \\sqrt{\\dfrac{m}{g\\gamma_y}} \\left( \\dfrac{1}{V_y - \\sqrt{\\frac{mg}{\\gamma_y}}} - \\dfrac{1}{V_y+\\sqrt{\\frac{mg}{\\gamma_y}}}\\right)dV_y = \n",
+    "\\dfrac{1}{2} \\sqrt{\\dfrac{m}{g\\gamma_y}} \\int \\left( \\dfrac{1}{V_y - \\sqrt{\\frac{mg}{\\gamma_y}}} - \\dfrac{1}{V_y+\\sqrt{\\frac{mg}{\\gamma_y}}}\\right)dV_y = \n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "=\\dfrac{1}{2}\\sqrt{\\dfrac{m}{g\\gamma_y}} \\ln{\\left(\\dfrac{V_y - \\sqrt{\\frac{mg}{\\gamma_y}}} {V_y + \\sqrt{\\frac{mg}{\\gamma_y}}}\\right)} +C = t. \\\\ \n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\ln{\\left(\\dfrac{V_y - \\sqrt{\\frac{mg}{\\gamma_y}}} {V_y + \\sqrt{\\frac{mg}{\\gamma_y}}}\\right)} =2\\sqrt{\\dfrac{g\\gamma_y}{m}} t - 2\\sqrt{\\dfrac{g\\gamma_y}{m}}C\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DAlej warunki poczatkowe dla Vy i Vx..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Z warunku początkowego $V_y(0)=0$ mamy:\n",
     "\\begin{equation}\n",
     "\\frac{1}{2} \\sqrt{\\frac{m}{g\\gamma}}\\cdot \\ln{1} +C =0 \\Rightarrow C=0.\n",
@@ -319,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
