--- a/main.ipynb
+++ b/main.ipynb
@@ -11,36 +11,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Skoki narciarskie są znane już od XIX wieku, natomiast nalęzą do olimpijskich sportów zimowych od 1924r. Celem każdego skoczka jest wykonanie dłuższego i wyższego skoku niż jego przeciwnik po rozpędzeniu się i odbiciu od progu skoczni. Podczas zawodów oceniany jest zasięg i styl lotu. Długość takiego skoku lub tzw. lotu (jeśli z wiekszej skoczni np. mamuciej) liczona jest od progu skoczni do pięty tylnego buta skoczka w chwili zetknięcia się narty na całej długości ze stokiem z dokładnością do 0,5 metra.\n",
-    "Aby lecieć dłużej trzeba pokonywać grawitację, z tego powodu bardzo często zdażało się, że sportowcy mieli niedowagę, wiedząc, iż czym mniejsza waga, tym wolniejsze spadanie. Aby zapobiec chorobom żywieniowym postanowiono zbadać od czego zależy wygrana i wprowadzono nowe zasady. Ustalono, że siła oporu i siła nośna jest zależna od powierzchni całego skoczka i jego sprzętu. Zatem czym mniejsze narty, tym słabsza była siła nośna i krótszy skok. Wprowadzono wtedy zasadę dotyczącą nart - miały one być tym krótsze im mniejsza waga (\"mniejsze skrzydła\"), natomiast nie mogą być one dłuższe niż 145/146% wzrostu zawodnika. Jeżeli masa ciała zawodnika nie spełnia minimalnego BMI 21 (ubrany w sprzęcie) to skoczek musi używać krótszych nart.\n",
-    "\n",
-    "#### Podczas lotu na sportowca działają: <br>"
+    "Skoki narciarskie są znane już od XIX wieku, natomiast nalęzą do olimpijskich sportów zimowych od 1924r. [[1](./Bibliografia.ipynb)] Celem każdego skoczka jest wykonanie dłuższego i wyższego skoku niż jego przeciwnik po rozpędzeniu się i odbiciu od progu skoczni. Podczas zawodów oceniany jest zasięg i styl lotu. Długość takiego skoku lub tzw. lotu (jeśli z wiekszej skoczni np. mamuciej) liczona jest od progu skoczni do pięty tylnego buta skoczka w chwili zetknięcia się narty na całej długości ze stokiem z dokładnością do 0,5 metra. [[2]((./Bibliografia.ipynb)]\n",
+    "Aby lecieć dłużej trzeba pokonywać grawitację, z tego powodu bardzo często zdażało się, że sportowcy mieli niedowagę, wiedząc, iż czym mniejsza waga, tym wolniejsze spadanie. Aby zapobiec chorobom żywieniowym postanowiono zbadać od czego zależy wygrana i wprowadzono nowe zasady. Ustalono, że siła oporu i siła nośna jest zależna od powierzchni całego skoczka i jego sprzętu. Zatem czym mniejsze narty, tym słabsza była siła nośna i krótszy skok. Wprowadzono wtedy zasadę dotyczącą nart - miały one być tym krótsze im mniejsza waga (\"mniejsze skrzydła\"), natomiast nie mogą być one dłuższe niż 146% wzrostu zawodnika. [[3](./Bibliografia.ipynb)] Jeżeli masa ciała zawodnika nie spełnia minimalnego BMI 21 (ubrany w sprzęcie) to skoczek musi używać krótszych nart. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Podczas lotu na sportowca działają: <br>\n",
     "- siła grawitacji $F_g$\n",
     "\\begin{equation}\n",
     "F_g = m \\cdot g ,\n",
-    "\\end{equation}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\\end{equation}\n",
     "- siła nośna $F_l$\n",
     "\\begin{equation}\n",
-    "F_l = \\dfrac{\\rho}{2} \\cdot v^2 \\cdot c_l \\cdot A = \\dfrac{\\rho}{2} \\cdot v^2 \\cdot L,\n",
-    "\\end{equation}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "F_l = \\dfrac{\\rho}{2} \\cdot v^2 \\cdot c_l \\cdot A = \\dfrac{\\rho}{2} \\cdot v^2 \\cdot L = \\gamma \\cdot \\text{v}^2,\n",
+    "\\end{equation}\n",
     "- siła oporu $F_d$\n",
     "\\begin{equation}\n",
     "F_d = \\dfrac{\\rho}{2} \\cdot c_d \\cdot A \\cdot \\text{v}^2 = \\dfrac{\\rho}{2} \\cdot D  \\cdot \\text{v}^2 = \\gamma \\cdot \\text{v}^2,\n",
@@ -68,7 +55,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "zdjecie skoczka na osiach x i y z silami!!!"
+    "W przypadku ruchu w dwóch wymiarach prędkość wykorzystywana w sile oporu jest długością wektora predkości $\\text{v}=(V_x,V_y)$ i jest równa $|\\text{v}|=\\sqrt{V_x^2+V_y^2}$ Ponieważ siła oporu działa wzdłuż unormowanego wektora prędkości to siła postaci $ F_d \\cdot \\dfrac{\\text{v}}{|\\text{v}|} $ będzie działać na skoczka. <br>\n",
+    "Równanie staje się nieliniowe i aby je rozwiązać wykorzystamy schemat Eulera. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Skoczek na osiach i jego siły](siły-skoczek.png)"
    ]
   },
   {
@@ -139,11 +134,17 @@
     "Najpierw rozwiążemy równanie dla osi X:\n",
     "\\begin{equation}\n",
     "\\int \\dfrac{dV_x}{ \\dfrac{- \\gamma_x \\cdot V_x}{m}} = - \\dfrac{m}{\\gamma_x} \\cdot \\int \\frac{1}{V_x} dV_x = - \\dfrac{m}{\\gamma_x} \\cdot \\ln{|V_x|} + C = t,\n",
-    "\\\\\n",
+    "\\end{equation}\n",
+    "<br>\n",
+    "\\begin{equation}\n",
     "-\\dfrac{m}{\\gamma_x}\\cdot \\ln{|V_x|}= t - C ,\n",
-    "\\\\\n",
+    "\\end{equation}\n",
+    "<br>\n",
+    "\\begin{equation}\n",
     "\\ln{|V_x|} = - \\dfrac{t \\cdot \\gamma_x}{m} + \\dfrac{C \\cdot \\gamma_x}{m}\n",
-    "\\\\\n",
+    "\\end{equation}\n",
+    "<br>\n",
+    "\\begin{equation}\n",
     "V_x = (e)^ {-\\dfrac{t\\gamma_x}{m}} \\cdot (e)^{C{\\dfrac{\\gamma_x}{m}}}.\n",
     "\\end{equation}"
    ]
@@ -154,12 +155,27 @@
    "source": [
     "Teraz możemy przejść do równania dla osi Y:\n",
     "\\begin{equation}\n",
-    "\\int \\dfrac{dV_y}{\\dfrac{\\gamma_y}{m}\\cdot V_y -g} = \\dfrac{m}{\\gamma_y}\\cdot \\ln{|\\dfrac{\\gamma_y}{m}V_y - g|} +C = t \\\\\n",
-    "\\dfrac{m}{\\gamma_y}\\cdot \\ln{|\\dfrac{\\gamma_y}{m}V_y - g|} = t - C \\\\ \n",
-    "\\ln{|\\dfrac{\\gamma_y}{m}V_y - g|} =\\dfrac{t\\gamma_y}{m} - \\dfrac{C\\gamma_y}{m} \\\\\n",
-    "\\dfrac{\\gamma_y}{m}V_y - g = e^{\\left(\\dfrac{t\\gamma_y}{m} - \\dfrac{C\\gamma_y}{m}\\right)}\\\\\n",
-    "\\dfrac{\\gamma_y}{m}V_y = e^{\\left(\\dfrac{t\\gamma_y}{m} - \\dfrac{C\\gamma_y}{m}\\right)} +g \\\\\n",
-    "V_y = \\dfrac{m}{\\gamma_y}e^{\\left(\\dfrac{t\\gamma_y}{m} - \\dfrac{C\\gamma_y}{m}\\right)} +\\dfrac{m}{\\gamma_y}g\n",
+    "\\int \\dfrac{dV_y}{\\dfrac{\\gamma_y}{m}\\cdot V_y -g} = \\dfrac{m}{\\gamma_y}\\cdot \\ln{|\\dfrac{\\gamma_y}{m}V_y - g|} +C = t. \n",
+    "\\end{equation}\n",
+    "<br>\n",
+    "\\begin{equation}\n",
+    "\\dfrac{m}{\\gamma_y}\\cdot \\ln{|\\dfrac{\\gamma_y}{m}V_y - g|} = t - C ,\n",
+    "\\end{equation}\n",
+    "<br>\n",
+    "\\begin{equation}\n",
+    "\\ln{|\\dfrac{\\gamma_y}{m}V_y - g|} =\\dfrac{t\\gamma_y}{m} - \\dfrac{C\\gamma_y}{m} ,\n",
+    "\\end{equation}\n",
+    "<br>\n",
+    "\\begin{equation}\n",
+    "\\dfrac{\\gamma_y}{m}V_y - g = e^{\\left(\\dfrac{t\\gamma_y}{m} - \\dfrac{C\\gamma_y}{m}\\right)},\n",
+    "\\end{equation}\n",
+    "<br>\n",
+    "\\begin{equation}\n",
+    "\\dfrac{\\gamma_y}{m}V_y = e^{\\left(\\dfrac{t\\gamma_y}{m} - \\dfrac{C\\gamma_y}{m}\\right)} +g ,\n",
+    "\\end{equation}\n",
+    "<br>\n",
+    "\\begin{equation}\n",
+    "V_y = \\dfrac{m}{\\gamma_y}e^{\\left(\\dfrac{t\\gamma_y}{m} - \\dfrac{C\\gamma_y}{m}\\right)} +\\dfrac{m}{\\gamma_y}g.\n",
     "\\end{equation}"
    ]
   },
@@ -211,9 +227,13 @@
     "Najpierw rozwiążemy równanie dla osi X:\n",
     "\\begin{equation}\n",
     "\\int \\dfrac{dV_x}{ \\dfrac{- \\gamma_x \\cdot V_x^2}{m}} = - \\dfrac{m}{\\gamma_x} \\cdot \\int \\frac{1}{V_x^2} dV_x = - \\dfrac{m}{\\gamma_x} \\cdot\\left( - \\dfrac{1}{V_x} \\right)+ C = \\dfrac{m}{\\gamma_x \\cdot V_x} + C = t,\n",
-    "\\\\\n",
+    "\\end{equation}\n",
+    "<br>\n",
+    "\\begin{equation}\n",
     "\\dfrac{m}{\\gamma_x \\cdot V_x} = t - C,\n",
-    "\\\\\n",
+    "\\end{equation}\n",
+    "<br>\n",
+    "\\begin{equation}\n",
     "V_x = \\dfrac{m}{\\gamma_x(t - C) }.\n",
     "\\end{equation}"
    ]
@@ -225,32 +245,38 @@
     "Teraz możemy przejść do równania dla osi Y: <br>\n",
     "Korzystamy z ułamków prostych\n",
     "\\begin{equation}\n",
-    "\\dfrac{dV_y}{\\dfrac{\\gamma_y}{m}V_y^2 - g} = \\dfrac{A}{\\sqrt{\\dfrac{\\gamma_y}{m}}V_y - \\sqrt{g}}  +\\dfrac{B}{\\sqrt{\\dfrac{\\gamma_y}{m}}V_y + \\sqrt{g}}, \\\\\n",
-    "\\text{mnożymy obustronnie przez mianownik po lewej stronie}\\\\\n",
-    "dV_y = A\\cdot \\left(\\sqrt{\\dfrac{\\gamma_y}{m}}V_y + \\sqrt{g}\\right) + B\\left(\\sqrt{\\dfrac{\\gamma_y}{m}}V_y - \\sqrt{g}\\right) \\\\\n",
-    "dVy = V_y \\cdot \\left( \\sqrt{\\dfrac{\\gamma_y}{m}}\\cdot A +\\sqrt{\\dfrac{\\gamma_y}{m}}\\cdot B \\right) +\\left( \\sqrt{g}\\cdot A-\\sqrt{g}\\cdot B \\right)\n",
+    "\\dfrac{dV_y}{\\dfrac{\\gamma_y}{m}V_y^2 - g} = \\dfrac{A}{\\sqrt{\\dfrac{\\gamma_y}{m}}V_y - \\sqrt{g}}  +\\dfrac{B}{\\sqrt{\\dfrac{\\gamma_y}{m}}V_y + \\sqrt{g}}, \n",
     "\\end{equation}\n",
-    "\n",
+    "<br>mnożymy obustronnie przez mianownik z lewej strony:\n",
+    "\\begin{equation}\n",
+    "dV_y = A\\cdot \\left(\\sqrt{\\dfrac{\\gamma_y}{m}}V_y + \\sqrt{g}\\right) + B\\left(\\sqrt{\\dfrac{\\gamma_y}{m}}V_y - \\sqrt{g}\\right) ,\n",
+    "\\end{equation}\n",
+    "<br>\n",
+    "\\begin{equation}\n",
+    "dVy = V_y \\cdot \\left( \\sqrt{\\dfrac{\\gamma_y}{m}}\\cdot A +\\sqrt{\\dfrac{\\gamma_y}{m}}\\cdot B \\right) +\\left( \\sqrt{g}\\cdot A-\\sqrt{g}\\cdot B \\right).\n",
+    "\\end{equation}\n",
+    "<br>\n",
     "\\begin{equation}\n",
     "\\left\\{ \\begin{array}{l}\n",
     "\\sqrt{\\dfrac{\\gamma_y}{m}}\\cdot A +\\sqrt{\\dfrac{\\gamma_y}{m}}\\cdot B  = 0 \\\\\n",
     "\\sqrt{g}\\cdot A-\\sqrt{g}\\cdot B = 1\\\\\n",
     "\\end{array} \\right. \n",
     "\\end{equation}\n",
-    "\n",
+    "<br>\n",
     "\\begin{equation}\n",
     "\\left\\{ \\begin{array}{l}\n",
     "2 \\cdot \\sqrt{\\dfrac{\\gamma_y}{m}} \\cdot B = - \\sqrt{\\dfrac{\\gamma_y}{mg}} \\\\\n",
     "A = \\dfrac{1}{\\sqrt{g}} +B\\\\\n",
     "\\end{array} \\right. \n",
     "\\end{equation}\n",
-    "\n",
+    "<br>\n",
     "\\begin{equation}\n",
     "\\left\\{ \\begin{array}{l}\n",
     "B = - \\dfrac{1}{2}\\sqrt{\\dfrac{1}{g}} \\\\\n",
     "A =  \\dfrac{1}{2}\\sqrt{\\dfrac{1}{g}}\\\\\n",
     "\\end{array} \\right. \n",
     "\\end{equation}\n",
+    "\n",
     "Czyli otrzymujemy:\n",
     "\\begin{equation}\n",
     "\\dfrac{dV_y}{\\dfrac{\\gamma_y}{m}V_y^2 - g} = \\dfrac{\\dfrac{1}{2}\\sqrt{\\dfrac{1}{g}}}{\\sqrt{\\dfrac{\\gamma_y}{m}}V_y - \\sqrt{g}}  +\\dfrac{- \\dfrac{1}{2}\\sqrt{\\dfrac{1}{g}}}{\\sqrt{\\dfrac{\\gamma_y}{m}}V_y + \\sqrt{g}} = \\dfrac{1}{2}\\sqrt{\\dfrac{m}{g\\gamma_y}} \\left( \\dfrac{1}{V_y - \\sqrt{\\dfrac{mg}{\\gamma_y}}}  - \\dfrac{1}{V_y + \\sqrt{\\dfrac{mg}{\\gamma_y}}} \\right),\n",
@@ -265,13 +291,16 @@
     "\\begin{equation}\n",
     "\\int \\dfrac{dV_y}{\\dfrac{\\gamma_y}{m}\\cdot V_y^2 -g} = \n",
     "\\int \\dfrac{1}{2} \\sqrt{\\dfrac{m}{g\\gamma_y}} \\left( \\dfrac{1}{V_y - \\sqrt{\\frac{mg}{\\gamma_y}}} - \\dfrac{1}{V_y+\\sqrt{\\frac{mg}{\\gamma_y}}}\\right)dV_y = \n",
+    "\\end{equation}\n",
+    "<br>\n",
+    "\\begin{equation}\n",
     "\\dfrac{1}{2} \\sqrt{\\dfrac{m}{g\\gamma_y}} \\int \\left( \\dfrac{1}{V_y - \\sqrt{\\frac{mg}{\\gamma_y}}} - \\dfrac{1}{V_y+\\sqrt{\\frac{mg}{\\gamma_y}}}\\right)dV_y = \n",
     "\\end{equation}\n",
-    "\n",
+    "<br>\n",
     "\\begin{equation}\n",
     "=\\dfrac{1}{2}\\sqrt{\\dfrac{m}{g\\gamma_y}} \\ln{\\left(\\dfrac{V_y - \\sqrt{\\frac{mg}{\\gamma_y}}} {V_y + \\sqrt{\\frac{mg}{\\gamma_y}}}\\right)} +C = t. \\\\ \n",
     "\\end{equation}\n",
-    "\n",
+    "<br>\n",
     "\\begin{equation}\n",
     "\\ln{\\left(\\dfrac{V_y - \\sqrt{\\frac{mg}{\\gamma_y}}} {V_y + \\sqrt{\\frac{mg}{\\gamma_y}}}\\right)} =2\\sqrt{\\dfrac{g\\gamma_y}{m}} t - 2\\sqrt{\\dfrac{g\\gamma_y}{m}}C\n",
     "\\end{equation}"
@@ -413,10 +442,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "can't assign to function call (<ipython-input-18-cb8d4c2a5525>, line 13)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-18-cb8d4c2a5525>\"\u001b[1;36m, line \u001b[1;32m13\u001b[0m\n\u001b[1;33m    y(i+1) = y(i) + dt* 4*y(i)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m can't assign to function call\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "t0 = 0\n",
+    "tf = 3\n",
+    "dt = 0.1\n",
+    "t = np.arange(t0, tf, dt)\n",
+    "print(t)\n",
+    "y(1)= 1\n",
+    "\n",
+    "#for i in range(1, length(t)-1):\n",
+    "   # y(1) = 1\n",
+    "    #y_exact(1) = 1\n",
+    " #   y(i+1) = y(i) + dt* 4*y(i)\n",
+    " #   y_exact(i+1) = exp(4*t*(i+1))\n",
+    "#plt.plot(t, y_exact)\n",
+    "#plt.ylabel('some numbers')\n",
+    "#plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ## [Bibliografia](Bibliografia.ipynb)"
+   ]
   }
  ],
  "metadata": {
