dodanie modułu Jumper

--- a/main.ipynb
+++ b/main.ipynb
@@ -274,11 +274,7 @@
     "Skocznia narciarska zbudowana jest zgodnie ze standardami International Ski Federation. Wytyczne te zostały napisane z myślą o bezpieczeństwie zawodników, tak aby wszystkie oddziaływania fizyczne oraz biomechaniczne były kontrolowane oraz łatwe do przewidzenia.\n",
     "\n",
     "Najważniejsze wymiary skoczni to długość horyzontalna H mierzona od progu do punktu K oraz odległość wertykalna H od progu do punktu K. Stosunek H:L jest tym większy im dłuższa jest skocznia i wynosi zazwyczaj $ 0.45 < H:L < 0.60$ . Punkt K jest punktem przegięcia skoczni narciarskiej, dlatego wysokość powierzchni lądowania (stoku) można wyrazić jako funkcję wielomianową trzeciego stopnia.\n",
-    "Wykorzystując funkcję:\n",
-    "\\begin{equation}\n",
-    "\\frac{1}{3a}x^3 - x^2 + c\n",
-    "\\end{equation}\n",
-    "inżynierowie są w stanie znaleźć parabolę sześcienną z punktem przegięcia w $x = a$ dla żądanego a\n"
+    "\n"
    ]
   },
   {
@@ -292,12 +288,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Początkowe nachylenie stoku powinno być większe niż kąt wyjścia z progu, ponieważ tor lotu skoczka w stosunku do powierzchni powinien przypominać parabolę, czyli wysokość nad stokiem początkowe rośnie, w połowie lotu przyjmuje maksimum, a następnie maleje aż do lądowania."
+    "Początkowe nachylenie stoku powinno być większe niż kąt wyjścia z progu, ponieważ tor lotu skoczka w stosunku do powierzchni powinien przypominać parabolę, czyli wysokość nad stokiem początkowe rośnie, w połowie lotu przyjmuje maksimum, a następnie maleje aż do lądowania.\n",
+    "\n",
+    "Wykorzystamy funkcję:\n",
+    "$\n",
+    "\\frac{1}{3a}x^3 - x^2 + c\n",
+    "$\n",
+    "aby znaleźć funkcję z punktem przegięcia dla żądanego a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -317,15 +319,24 @@
     "class Hill:\n",
     "\n",
     "    def __init__(self, length, velocity):\n",
+    "        '''\n",
+    "        :param length: horyzontalny dystans od progu do punktu K\n",
+    "        :param velocity: prędkość wyjścia z progu\n",
+    "        '''\n",
     "        self.velocity = velocity\n",
     "        self.length = length\n",
     "        self.height = self.length*(0.6)\n",
     "        self.draw_length = self.length*1.2\n",
-    "        self.modifier = -((1/(3*self.draw_length))*((self.draw_length)**3) - ((self.draw_length)**2))/self.height\n",
+    "        self.modifier = ((2/3)*((self.draw_length)**2))/self.height\n",
     "\n",
     "    def curve(self, x):\n",
+    "        '''\n",
+    "        :return: wielomian trzeciego stopnia od x\n",
+    "        '''\n",
+    "        # nie chcem zaczynać z x=0, ponieważ oczekujemy że stok pod progiem od razu będzie nachylony\n",
     "        x= x + self.length*0.2\n",
     "        return ((1/(3*(self.draw_length)))*(x**3) - (x**2))/self.modifier + self.height\n",
+    "\n",
     "\n",
     "import numpy\n",
     "skocznia = Hill(100,25)\n",
@@ -340,30 +351,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'Hill'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-de8ca27fa90d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mHill\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mskocznia\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mHill\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mx_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mskocznia\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlength\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0my_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mskocznia\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdraw\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mx_data\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'Hill'"
-     ]
-    }
-   ],
-   "source": []
+   "source": [
+    "Stwórzmy teraz reprezentację skoczka\n",
+    "Skoczkowi przyznamy daną masę oraz będziemy chcieli przemieszczać go po płaszczyźnie x,y"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Jumper:\n",
+    "\n",
+    "    def __init__(self, mass):\n",
+    "        self.mass = mass\n",
+    "        self.position = 0,0\n",
+    "\n",
+    "    def move(self, x, y):\n",
+    "        self.position = self.position[0] + x, self.position[1] + y\n"
+   ]
   }
  ],
  "metadata": {
