komentarze do kodu

--- a/main.ipynb
+++ b/main.ipynb
@@ -509,11 +509,21 @@
    ],
    "source": [
     "from math import sin, cos, pi\n",
+    "\n",
+    "# delta_t im mniejsza tym bardziej dokładne przybliżenie metodą Eulera\n",
     "delta_time = 0.001\n",
     "time = numpy.arange(0,15,delta_time)\n",
-    "jumper = Jumper(55)\n",
+    "\n",
+    "# tworzymy skoczka o masie 55 kg\n",
+    "jumper = Jumper(mass=55)\n",
+    "\n",
+    "# ustalmy stałą oporu jako odwrotnie proporcjonalną do masy\n",
     "Cd = 0.1 / jumper.mass\n",
+    "\n",
+    "# przyspieszenie g\n",
     "g = 9.81\n",
+    "\n",
+    "# kąt alfa, pod którym ustawiony jest skoczek w locie\n",
     "angle = pi/12\n",
     "area_coefficient = sin(angle), cos(angle)\n",
     "\n",
