--- a/Bibliografia.ipynb
+++ b/Bibliografia.ipynb
@@ -25,21 +25,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[3] [Sprzęt do skoków narciarskich](https://www.skokinarciarskie.pl/sprzet-skoczka-narciarskiego)"
+    "[3] [The physics of ski jumping, W. Müller, Department of Biophysics, Medical University of Graz, Austria](https://cds.cern.ch/record/1009275/files/p269.pdf) \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[4] [Zdjęcie skoczka na osiach z siłami](https://www.olympic.org/ski-jumping)"
+    "[4] [Sprzęt do skoków narciarskich](https://www.skokinarciarskie.pl/sprzet-skoczka-narciarskiego)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[5] [Zasady konstrukcji skoczni narciarskiej](https://assets.fis-ski.com/image/upload/v1592381507/fis-prod/assets/Construction-Norm_2018-2.pdf)"
+    "[5] [Zdjęcie skoczka na osiach z siłami](https://www.olympic.org/ski-jumping)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[6] [Zasady konstrukcji skoczni narciarskiej](https://assets.fis-ski.com/image/upload/v1592381507/fis-prod/assets/Construction-Norm_2018-2.pdf)"
    ]
   }
  ],
@@ -59,7 +66,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
